feat: integrate agreement generation into ERP account creation
- Add school_department and address to user model and provision form
- Store agreement templates in DB with admin management endpoints
- Initialize default templates from classpath on startup
- Implement Java+POI agreement generation service (3 docx types)
- Add single and batch agreement generation endpoints
- Update AdminCreateUserView with new fields and post-creation agreement dialog