@@ -1,14 +1,20 @@
 package com.smartlab.erp.controller;
 
+import com.smartlab.erp.agreement.AgreementBatchRequest;
+import com.smartlab.erp.agreement.AgreementGenerationService;
+import com.smartlab.erp.agreement.AgreementType;
+import com.smartlab.erp.agreement.AgreementZipService;
 import com.smartlab.erp.dto.ProvisionUserRequest;
 import com.smartlab.erp.dto.UpdateDailyWageRequest;
 import com.smartlab.erp.entity.User;
+import com.smartlab.erp.exception.BusinessException;
 import com.smartlab.erp.exception.PermissionDeniedException;
 import com.smartlab.erp.repository.UserRepository;
 import com.smartlab.erp.service.AuthService;
 import com.smartlab.erp.service.UserService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -30,8 +36,15 @@ public class AdminUserController {
     private final AuthService authService;
     private final UserService userService;
     private final UserRepository userRepository;
+    private final AgreementGenerationService agreementGenerationService;
+    private final AgreementZipService agreementZipService;
 
-    private static final String DOCUMENTS_DIR = "./uploads/documents";
+    @Value("${app.uploads.dir:/app/uploads}")
+    private String uploadsDir;
+
+    private Path documentsDir() {
+        return Path.of(uploadsDir, "documents");
+    }
 
     private void requireProvisionAdmin() {
         if (!authService.canProvisionAccounts(authService.getCurrentUser())) {
@@ -41,8 +54,10 @@ public class AdminUserController {
 
     @PostMapping("/provision")
     public ResponseEntity<Map<String, String>> provisionUser(@Valid @RequestBody ProvisionUserRequest request) {
-        authService.provisionUser(request);
-        return ResponseEntity.ok(Map.of("message", "账号创建成功，初始密码为：账号+123"));
+        String userId = authService.provisionUser(request);
+        return ResponseEntity.ok(Map.of(
+                "message", "账号创建成功，初始密码为：账号+123",
+                "userId", userId));
     }
 
     @GetMapping
@@ -107,7 +122,7 @@ public class AdminUserController {
             @RequestParam("file") MultipartFile file,
             @RequestParam(defaultValue = "other") String docType) {
         try {
-            Path userDir = Path.of(DOCUMENTS_DIR, userId);
+            Path userDir = documentsDir().resolve(userId);
             Files.createDirectories(userDir);
             String filename = docType + "_" + System.currentTimeMillis() + "_" + file.getOriginalFilename();
             Path filePath = userDir.resolve(filename);
@@ -122,7 +137,7 @@ public class AdminUserController {
     @GetMapping("/users/{userId}/documents")
     public ResponseEntity<List<Map<String, Object>>> listDocuments(@PathVariable String userId) {
         try {
-            Path userDir = Path.of(DOCUMENTS_DIR, userId);
+            Path userDir = documentsDir().resolve(userId);
             if (!Files.exists(userDir)) return ResponseEntity.ok(List.of());
             return ResponseEntity.ok(Files.list(userDir).map(p -> {
                 Map<String, Object> map = new HashMap<>();
@@ -142,7 +157,7 @@ public class AdminUserController {
     @GetMapping("/users/{userId}/documents/{filename}")
     public ResponseEntity<byte[]> downloadDocument(@PathVariable String userId, @PathVariable String filename) {
         try {
-            Path filePath = Path.of(DOCUMENTS_DIR, userId, filename);
+            Path filePath = documentsDir().resolve(userId).resolve(filename);
             if (!Files.exists(filePath)) return ResponseEntity.notFound().build();
             byte[] bytes = Files.readAllBytes(filePath);
             return ResponseEntity.ok()
@@ -154,26 +169,57 @@ public class AdminUserController {
     }
 
     @PostMapping("/users/{userId}/agreement")
-    public ResponseEntity<Map<String, String>> generateAgreement(@PathVariable String userId) {
+    public ResponseEntity<Map<String, String>> generateAgreement(
+            @PathVariable String userId,
+            @RequestParam(defaultValue = "INTERNET") AgreementType type) {
+        requireProvisionAdmin();
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("用户不存在"));
+        validateAgreementFields(user);
+
+        byte[] content = agreementGenerationService.generateAgreement(user, type);
+        Path userDir = documentsDir().resolve(userId);
         try {
-            Path userDir = Path.of(DOCUMENTS_DIR, userId);
             Files.createDirectories(userDir);
-            String filename = "agreement_" + System.currentTimeMillis() + ".txt";
-            String content = "员工入职协议\n\n"
-                    + "姓名: " + (user.getName() != null ? user.getName() : "") + "\n"
-                    + "账号: " + user.getUsername() + "\n"
-                    + "角色: " + (user.getRole() != null ? user.getRole() : "") + "\n"
-                    + "岗位: " + (user.getPosition() != null ? user.getPosition() : "") + "\n"
-                    + "入职日期: " + (user.getEntryDate() != null ? user.getEntryDate().toString() : "") + "\n"
-                    + "身份证号: " + (user.getIdNumber() != null ? user.getIdNumber() : "") + "\n\n"
-                    + "本协议一式两份，公司存档一份，本人持有一份。";
-            Files.writeString(userDir.resolve(filename), content);
+            String filename = "agreement_" + type.name().toLowerCase() + "_" + System.currentTimeMillis() + ".docx";
+            Files.write(userDir.resolve(filename), content);
             return ResponseEntity.ok(Map.of("message", "协议生成成功", "filename", filename));
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("message", "协议生成失败: " + e.getMessage()));
+            throw new RuntimeException("协议保存失败: " + e.getMessage(), e);
         }
+    }
+
+    @PostMapping("/users/{userId}/agreements/batch")
+    public ResponseEntity<byte[]> generateAgreementBatch(
+            @PathVariable String userId,
+            @RequestBody AgreementBatchRequest request) {
+        requireProvisionAdmin();
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("用户不存在"));
+        validateAgreementFields(user);
+
+        if (request.getTypes() == null || request.getTypes().isEmpty()) {
+            return ResponseEntity.badRequest().body(null);
+        }
+
+        byte[] zipBytes = agreementZipService.generateZip(user, request.getTypes());
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
+        String safeName = user.getName() != null ? user.getName() : "未命名";
+        headers.setContentDispositionFormData("attachment", safeName + "_实习文件.zip");
+        return ResponseEntity.ok().headers(headers).body(zipBytes);
+    }
+
+    private void validateAgreementFields(User user) {
+        if (isBlank(user.getName()) || isBlank(user.getIdNumber())
+                || isBlank(user.getSchoolDepartment()) || isBlank(user.getPhone())
+                || isBlank(user.getAddress())) {
+            throw new BusinessException("生成协议前请完善用户的姓名、身份证号、学校院系、手机号和住址");
+        }
+    }
+
+    private boolean isBlank(String s) {
+        return s == null || s.isBlank();
     }
 }
